# ryan_cc_MIT6824

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  compile_commands.json
docs/: Lab1.md
src/: README.md
src/buttonrpc/: Serializer.hpp  buttonrpc.hpp  my_fix.md  serializer.hpp
src/buttonrpc/depends/: zmq.h  zmq.hpp
src/buttonrpc/example/: buttonrpc_client.cc  buttonrpc_server.cc  main_client.cc  main_server.cc
src/kv_raft/: TODO.txt  arguments.hpp  build_noCmake.sh  client  client.cc  client_ryan.cc  kv_raft_client  kv_raft_server  locker.h  persister_-0  persister_-2  raft  raft copy.cc  raft.cc  raft.hpp  raft_bak.cc  raft_raw.hpp  raft_ryan.cc  raft_ryan.hpp  select.h  select_ryan.h  semaphore copy 2.hpp  semaphore.hpp  server  server.cc  server_ryan.cc
src/map_reduce/: CMakeLists.txt  TODO.txt  build.sh  build_noCmake.sh  build_noCmake_old.sh  build_raw.sh
src/map_reduce/main/: mr-out-0  mr-out-2  mr-out-4  mr-out-7  mrcoordinator  mrcoordinator.cc  mrcoordinator_raw.cc  mrworker  mrworker.cc  mrworker_old.cc  mrworker_raw.cc
src/map_reduce/mr/: coordinator.cc  coordinator.h  locker.h  worker.cc  worker.h  worker_chatGPT.cc  worker_old.cc  worker_old.h
src/map_reduce/mrapps/: map_reduce.cc  word_count.cc
src/raft/: TODO.txt  build_noCmake.sh  locker.h  raft  raft.cc  raft_chatGPT.cc  raft_old
